--- a/src/sass/media.sass
+++ b/src/sass/media.sass
@@ -2,7 +2,12 @@
 
 /*  --- Extra large devices (large desktops, 1200px and up) --- */
 
-@media screen and (min-width: 1200px) and (max-width: 1680px) 
+@media screen and (min-width: 1681px)
+    .container
+        &--nav
+            width: 100%
+
+@media screen and (min-width: 1200px) and (max-width: 1680px)
 	.container
 		width: 1200px
 		&--nav
