--- a/src/css/main.css
+++ b/src/css/main.css
@@ -1,6 +1,7 @@
+@import url("https://fonts.googleapis.com/css?family=Poppins:300,300i,400,400i,600,600i");
+@import url("https://fonts.googleapis.com/css?family=Oswald:700");
 @import url(./normalize.css);
 @import url(../libs/slick-carousel/slick/slick.css);
-@import url(./media.css);
 * {
   -webkit-box-sizing: border-box;
           box-sizing: border-box; }
@@ -54,7 +55,7 @@ textarea::placeholder {
   padding: 140px 20px 140px;
   margin: 0 auto; }
   .container--nav {
-    max-width: 1920px;
+    width: 1920px;
     padding: 0 20px; }
     .container--nav:after {
       content: "";
@@ -72,7 +73,7 @@ textarea::placeholder {
 /* --- navigation --- */
 .nav {
   width: 100%;
-  line-height: 152px; }
+  line-height: 100px; }
 
 .nav-menu {
   float: left; }
