--- a/src/css/media.css
+++ b/src/css/media.css
@@ -1,5 +1,9 @@
 /* --- @media --- */
 /*  --- Extra large devices (large desktops, 1200px and up) --- */
+@media screen and (min-width: 1681px) {
+  .container--nav {
+    width: 100%; } }
+
 @media screen and (min-width: 1200px) and (max-width: 1680px) {
   .container {
     width: 1200px; } }
