--- a/src/css/main.css
+++ b/src/css/main.css
@@ -271,6 +271,7 @@ textarea::placeholder {
 
 .slick-prev, .slick-next {
   position: relative;
+  outline: none;
   top: -35px;
   margin: 10px 70px;
   padding: 7px 0;
