--- a/src/sass/main.sass
+++ b/src/sass/main.sass
@@ -225,6 +225,7 @@ textarea::placeholder
 		overflow: visible
 	&-prev,&-next
 		position: relative
+		outline: none
 		top: -35px
 		margin: 10px 70px
 		padding: 7px 0
