--- a/src/css/main.css
+++ b/src/css/main.css
@@ -44,12 +44,15 @@ textarea::placeholder {
   color: #fff; }
 
 /* --- header --- */
+.block-position {
+  height: 100vh;
+  min-height: 600px; }
+
 .header {
   background: -webkit-gradient(linear, left top, left bottom, from(#bc52a8), to(#7442bc));
   background: -webkit-linear-gradient(top, #bc52a8, #7442bc);
   background: -o-linear-gradient(top, #bc52a8, #7442bc);
-  background: linear-gradient(to bottom, #bc52a8, #7442bc);
-  height: 100vh; }
+  background: linear-gradient(to bottom, #bc52a8, #7442bc); }
 
 /* --- container width&style --- */
 .container {
@@ -57,20 +60,23 @@ textarea::placeholder {
   margin: 0 auto; }
   .container--nav {
     width: 1920px;
+    height: 15%;
     padding: 0 50px; }
     .container--nav:after {
       content: "";
       display: table;
       clear: both; }
   .container--banner {
-    width: 1080px; }
+    width: 1080px;
+    height: 85%;
+    padding: 0 20px; }
   .container--about {
     width: 910px; }
   .container--services {
     width: 1680px; }
   .container--contact {
     width: 910px;
-    height: 100vh; }
+    padding: 0 20px; }
 
 /* --- navigation --- */
 .nav {
@@ -112,6 +118,11 @@ textarea::placeholder {
 /* --- banner --- */
 .banner {
   text-align: center; }
+  .banner::before {
+    content: '';
+    display: inline-block;
+    height: 100%;
+    vertical-align: middle; }
   .banner-head {
     opacity: 0.5;
     color: #ffffff;
@@ -121,16 +132,15 @@ textarea::placeholder {
     display: block;
     color: #ffffff;
     font-size: 76px;
-    line-height: 110px;
-    margin: 80px 0 60px; }
+    line-height: 120%;
+    margin: 5% 0 5%; }
   .banner-descr {
     display: block;
     color: #ffffff;
     font-size: 24px;
     font-weight: 300;
     line-height: 50px;
-    padding: 0 65px;
-    margin-bottom: 110px; }
+    padding: 0 65px; }
 
 /* --- buttons style --- */
 .btn {
@@ -153,13 +163,14 @@ textarea::placeholder {
     transition: 0.5s; }
     .btn--nav:hover {
       background-color: rgba(255, 255, 255, 0.3);
-      font-size: 17px; }
+      font-size: 14px; }
   .btn--banner {
     background-color: #ffffff;
     text-decoration: none;
     color: #673fbf;
     font-size: 24px;
     font-weight: 600;
+    margin-top: 5%;
     padding: 43px 64px 43px 64px;
     text-transform: uppercase;
     -webkit-transition: all 1s;
@@ -211,7 +222,7 @@ textarea::placeholder {
     font-weight: 600;
     text-transform: uppercase;
     text-decoration: none;
-    margin: 80px 0 100px; }
+    margin: 1% 0 2%; }
 
 /* --- pulse button --- */
 .btn--banner:hover::after {
@@ -343,6 +354,7 @@ textarea::placeholder {
       background-color: #fff; }
   .title--contact {
     margin: 0 50px;
+    padding-top: 4%;
     color: #ffffff; }
     .title--contact:after {
       background-color: #fff; }
