--- a/src/sass/media.sass
+++ b/src/sass/media.sass
@@ -7,11 +7,11 @@
     &--nav
       width: 100%
 
-@media screen and (min-width: 1401px) and (max-width: 1680px)
+@media screen and (min-width: 1201px) and (max-width: 1680px)
   .container
     width: 1200px
     &--nav
-      padding: 0 10px
+      padding: 0 30px
 
   .nav-menu
     &__item
@@ -27,90 +27,14 @@
       font-size: 22px
     &-info
       font-size: 73px
-      line-height: 100px
     &-descr
       font-size: 22px
 
   .btn--contact
-    margin: 50px 0 20px
+    //margin: 50px 0 20px
 
   .portfolio-slider__buttons
     right: 39%
-
-@media screen and (min-width: 1201px) and (max-width: 1400px)
-  .container
-    width: 1200px
-    padding: 30px 20px 30px
-    &--nav
-      padding: 0 10px
-    &--contact
-      width: 900px
-
-  .nav-menu
-    &__link
-      font-size: 12px
-
-  .btn--nav
-    padding: 15px 30px
-    font-size: 12px
-
-  .banner
-    &-head
-      font-size: 18px
-    &-info
-      font-size: 55px
-      line-height: 60px
-      margin: 40px 0 30px
-    &-descr
-      font-size: 20px
-      margin-bottom: 70px
-      line-height: 40px
-
-  .btn--banner
-    font-size: 18px
-    padding: 35px 54px 35px 54px
-
-  .title
-    font-size: 30px
-    font-weight: 400
-    line-height: 30px
-    &:after
-      margin: 30px auto
-    &--texted:before
-      top: -15px
-
-
-
-  .portfolio__item
-    width: 870px !important
-    height: 387px
-    &-info
-      padding: 30px 35px 10px
-      &_icon
-        width: 60px
-        height: 60px
-        padding-top: 12px
-        padding-left: 16px
-      &_heading
-        font-size: 20px
-        line-height: 20px
-        padding: 15px 0
-  .text
-    line-height: 22px
-
-  .portfolio-slider__buttons
-    bottom: -10px
-    right: 40.3%
-
-  .form-field
-    margin: 15px
-
-  .btn--contact
-    font-size: 18px
-    font-weight: 400
-    margin: 50px 0 20px
-    padding: 35px 54px
-
 
 /*  --- Large devices (desktops, 992px and up) --- */
 
@@ -119,6 +43,51 @@
     width: 900px
     &--nav
       padding: 0 10px
+    &--banner
+      padding: 5% 20px
+
+  .nav
+    line-height: 80px
+    &-menu
+      &__item
+        font-weight: 400
+      &__link
+        font-size: 12px
+        padding: 0px 8px
+    &-logo
+      top: 9%
+
+  .btn
+    &--nav
+      font-size: 12px
+      padding: 10px 30px
+    &--banner
+      font-size: 18px
+      font-weight: 400
+      margin-top: 5%
+      padding: 23px 44px 23px 44px
+      &:after
+        top: -10px
+        right: -10px
+        left: -10px
+        bottom: -10px
+      &:before
+        top: -10px
+        right: -10px
+        left: -10px
+        bottom: -10px
+
+  .banner
+    &-head
+      font-size: 18px
+    &-info
+      font-size: 56px
+      line-height: 120%
+      margin: 5% 0 5%
+    &-descr
+      font-size: 18px
+      font-weight: 300
+      line-height: 30px
 
 /*  --- Medium devices (tablets, 768px and up) --- */
 
