--- a/src/css/main.css
+++ b/src/css/main.css
@@ -44,11 +44,12 @@ textarea::placeholder {
   color: #fff; }
 
 /* --- header --- */
-.block-position {
-  height: 100vh;
-  min-height: 600px; }
-
 .header {
+  display: table;
+  width: 100%;
+  height: 100vh;
+  min-height: 775px;
+  position: relative;
   background: -webkit-gradient(linear, left top, left bottom, from(#bc52a8), to(#7442bc));
   background: -webkit-linear-gradient(top, #bc52a8, #7442bc);
   background: -o-linear-gradient(top, #bc52a8, #7442bc);
@@ -60,7 +61,6 @@ textarea::placeholder {
   margin: 0 auto; }
   .container--nav {
     width: 1920px;
-    height: 15%;
     padding: 0 50px; }
     .container--nav:after {
       content: "";
@@ -68,7 +68,6 @@ textarea::placeholder {
       clear: both; }
   .container--banner {
     width: 1080px;
-    height: 85%;
     padding: 0 20px; }
   .container--about {
     width: 910px; }
@@ -81,7 +80,10 @@ textarea::placeholder {
 /* --- navigation --- */
 .nav {
   width: 100%;
-  line-height: 100px; }
+  line-height: 100px;
+  position: absolute;
+  top: 0;
+  left: 0; }
 
 .nav-menu {
   float: left; }
@@ -117,12 +119,10 @@ textarea::placeholder {
 
 /* --- banner --- */
 .banner {
-  text-align: center; }
-  .banner::before {
-    content: '';
-    display: inline-block;
-    height: 100%;
-    vertical-align: middle; }
+  display: table-cell;
+  vertical-align: middle;
+  text-align: center;
+  padding-top: 100px; }
   .banner-head {
     opacity: 0.5;
     color: #ffffff;
