--- a/src/sass/main.sass
+++ b/src/sass/main.sass
@@ -20,11 +20,12 @@ textarea::placeholder
     color: #fff
 
 /* --- header --- */
-.block-position
-    height: 100vh
-    min-height: 600px
-
 .header
+    display: table
+    width: 100%
+    height: 100vh
+    min-height: 775px
+    position: relative
     background: linear-gradient(to bottom, #bc52a8, #7442bc)
 
 
@@ -36,7 +37,6 @@ textarea::placeholder
     &--nav
         // max-width to width
         width: 1920px
-        height: 15%
         padding: 0 50px
         &:after
             content: ""
@@ -44,7 +44,6 @@ textarea::placeholder
             clear: both
     &--banner
         width: 1080px
-        height: 85%
         padding: 0 20px
     &--about
         width: 910px
@@ -59,6 +58,9 @@ textarea::placeholder
 .nav
     width: 100%
     line-height: 100px
+    position: absolute
+    top: 0
+    left: 0
 
 .nav-menu
     float: left
@@ -93,13 +95,16 @@ textarea::placeholder
 /* --- banner --- */
  
 .banner
+    display: table-cell
+    vertical-align: middle
     text-align: center
+    padding-top: 100px
     //min-height: 500px
-    &::before
-        content: ''
-        display: inline-block
-        height: 100%
-        vertical-align: middle
+    //&::before
+    //    content: ''
+    //    display: inline-block
+    //    height: 100%
+    //    vertical-align: middle
     &-head
         opacity: 0.5
         color: #ffffff
